--- a/src/main/resources/templates/expenses-list.html
+++ b/src/main/resources/templates/expenses-list.html
@@ -7,5 +7,21 @@
     <body>
         <h1>List of Expenses</h1>
         <hr/>
+        <table border="1">
+            <thead>
+                <th>Name</th>
+                <th>Description</th>
+                <th>Amount</th>
+                <th>Date</th>
+            </thead>
+            <tbody>
+                <tr th:each="expense: ${expenses}">
+                    <td th:text="${expense.name}"></td>
+                    <td th:text="${expense.description}"></td>
+                    <td th:text="${expense.amount}"></td>
+                    <td th:text="${expense.date}"></td>
+                </tr>
+            </tbody>
+        </table>
     </body>
 </html>
