--- a/src/main/resources/templates/expenses-list.html
+++ b/src/main/resources/templates/expenses-list.html
@@ -19,7 +19,7 @@
                     <td th:text="${expense.name}"></td>
                     <td th:text="${expense.description}"></td>
                     <td th:text="${expense.amount}"></td>
-                    <td th:text="${expense.date}"></td>
+                    <td th:text="${expense.dateString}"></td>
                 </tr>
             </tbody>
         </table>
